SDKs/traccar.org/4.14/java/USAGE.md
<!-- Start SDK Example Usage -->
```java
package hello.world;

import openapisdk.SDK;
import openapisdk.models.shared.Security;

public class Application {
    public static void main(String[] args) {
        try {
            SDK.Builder builder = SDK.builder();

            builder.setSecurity(
                new Security() {{
                    basicAuth = new SchemeBasicAuth() {{
                        password = "YOUR_PASSWORD_HERE";
                        username = "YOUR_USERNAME_HERE";
                    }};
                }}
            );

            SDK sdk = builder.build();

            DeleteAttributesComputedIdRequest req = new DeleteAttributesComputedIdRequest() {{
                pathParams = new DeleteAttributesComputedIdPathParams() {{
                    id = 2350280920086746644;
                }};
            }};

            DeleteAttributesComputedIdResponse res = sdk.attributes.deleteAttributesComputedId(req);

            if (res.statusCode == 200) {
                // handle response
            }
        } catch (Exception e) {
            // handle exception
        }
```
<!-- End SDK Example Usage -->